# kin

./: LEGAL.md  README.md  SECURITY.md  index.html
assets/: index-1095b23f.js  index-120af8ca.js  index-266533f0.js  index-29eb0c12.js  index-3818b9a4.js  index-5434f258.js  index-56efe59e.js  index-67ad319f.js  index-7140c32b.js  index-992b5981.css  index-9973b8c5.js  index-9bb86c70.js  index-a74d5645.js  index-c7b66110.js  index-e1d839cc.js  index-e472c482.js  index-e55f878a.js  index-f0eb3311.css  index-f1a7c82b.js  index-f29ad844.js  index-f983662e.css  solanaEmbed.esm-445dda7d.js  solanaEmbed.esm-4685b59f.js  solanaEmbed.esm-8250c182.js  solanaEmbed.esm-bf7583d0.js  solanaEmbed.esm-c3be5173.js  solanaEmbed.esm-d4c95964.js
backend/swap-and-burn/: Anchor.toml  package.json  provider-key.json
backend/swap-and-burn/client/idl/: swap_and_burn.json
backend/swap-and-burn/client/typescript/: package.json
backend/swap-and-burn/programs/swap-and-burn/: Cargo.toml
backend/swap-and-burn/programs/swap-and-burn/src/: context.rs  lib.rs  state.rs  utils.rs
backend/swap-and-burn/scripts/: const.js
backend/swap-and-burn/tests/: swap-and-burn.ts
backend/swap-and-burn/tests/utils/: config.ts  env.ts  pda.ts  spl.ts  swap-and-burn.ts  transaction.ts  wait.ts
frontend/: package-lock.json  package.json  vite.config.ts  vite.kin-erc20-swap.config.ts
frontend/kin-erc20-swap/: App.vue  index.html  index.js
frontend/src/components/dialogs/: DialogClusterSettings.vue  DialogRiskConsent.vue  index.ts
frontend/src/components/pages/: index.ts  (+4 more)
frontend/src/types/: index.ts
(+13 files in other folders)
