[package]
name = "swap-and-burn"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "swap_and_burn"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "^0.26.0"
anchor-spl = "^0.26.0"
spl-token = "^3.5.0"
solana-program = "^1.16.6"
solana-security-txt = "1.1.0"
